[package]
name = "antsee"
authors = ["Emma Alexandria"]
description = "A simple, dependency free, and versatile crate for terminal colors and properties"
license = "MIT"
repository = "https://github.com/emmalexandria/antsee"
readme = "README.md"
version = "1.0.1"
edition = "2021"
keywords = ["terminal", "ansi", "colors"]

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.215", features = ["derive"], optional = true }
