[package]
name = "antsee"
authors = ["Emma Alexandria"]
description = "A terminal color and style library designed not for output but for creating configuration files"
license = "MIT"
repository = "https://github.com/emmalexandria/antsee"
readme = "README.md"
version = "1.0.2"
edition = "2021"
keywords = ["terminal", "ansi", "configuration", "color", "terminal-text"]

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.215", features = ["derive"], optional = true }

[dev-dependencies]
nu-ansi-term = "0.50.1"
toml = "0.8.19"
